--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>LoadingL0nl3y</title>
 </head>
 
-<body class="h-screen bg-bg bg-blur-3xl">
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
